<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <!-- The navigation drawer -->
    <LinearLayout
        android:id="@+id/drawer"
        android:orientation="vertical"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:background="#111"
        android:layout_gravity="start">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/DVBShadow"
            android:text="@string/active_device"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            />

        <Button
            android:id="@+id/active_profile"
            style="?android:actionButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Title.Inverse"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:text="@string/demo_device"
            android:paddingLeft="30dp"
            android:drawableRight="@drawable/ic_action_change_profile"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/DVBShadow"
            android:text="@string/menu"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            />

        <ListView
            android:id="@+id/menu_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>